--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Phone Gap Darksol
+<html>
+<head>
+    <title>Phone Gap Darksol</title>
+</head>
+<body>
+  <h1>Hello PhoneGap</h1>
+</body>
+</html>
