new index.html from tej
lorem text

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
   <h1>Hello PhoneGap</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, eveniet, numquam, iste itaque cumque facere labore dolores esse id voluptatibus ad fugit incidunt temporibus reprehenderit quia exercitationem a dicta at.</p>
 </body>
 </html>
